src/objects/Invoice__c.object
<CustomObject>
    <description>Invoice for hotel reservation.</description>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promo Code</label>
        <referenceTo>Promo_Code__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>